<resources>
    <string name="app_name">Food Style</string>
    <string name="main_action">Valider</string>
    <string name="main_action2">Confirmer</string>
    <string name="title">Bienvenue</string>
    <string name="cat1">Entrees</string>
    <string name="cat2">Plats</string>
    <string name="cat3">Desserts</string>
    <string name="home_ble_action">BLE</string>
    <string name="BLEbtn">Bluetooth</string>
    <string name="titlePlats"></string>
    <string name="quantite">0</string>


    <string name="ble_scan_play_title">Lancer le scan BLE</string>
    <string name="ble_scan_pause_title">Scan BLE en cours...</string>
    <string name="ble_device_status">Status : %1$s</string>
    <string name="ble_device_status_connecting">Connexion en cours</string>
    <string name="ble_device_status_disconnected">Déconnecté</string>
    <string name="ble_status_connected">Connecté</string>
    <string name="ble_device_status_disconnecting">Déconnexion en cours</string>
    <string name="entrerValeur">Entrez une valeur</string>
    <string name="characteristicRead">LIRE</string>
    <string name="characteristicWrite">ECRIRE</string>
    <string name="characteristicNotify">NOTIFIER</string>



</resources>